tests/fixtures/LatestTests/ObjectTests/errors/custom_type_not_found.fg
/; EXPECT_ERROR: CustomTypeNotFound
fun test2(a: string) -> as nthg decl